--- a/.github/workflows/flutter_package.yml
+++ b/.github/workflows/flutter_package.yml
@@ -100,8 +100,11 @@ jobs:
         if: "${{inputs.setup != ''}}"
         run: ${{inputs.setup}}
 
-      - name: 🕵️ Analyze
-        run: flutter analyze ${{inputs.analyze_directories}}
+      # - name: ✨ Check Formatting
+      #   run: dart format --line-length ${{inputs.format_line_length}} --set-exit-if-changed ${{inputs.format_directories}}
+
+      # - name: 🕵️ Analyze
+      #   run: flutter analyze ${{inputs.analyze_directories}}
 
       - name: 🧪 Run Tests
         run: very_good test -j ${{inputs.concurrency}} ${{(inputs.test_recursion && '--recursive') || ''}} ${{(inputs.test_optimization && '--optimization') || '--no-optimization'}} --coverage --test-randomize-ordering-seed random
