Add animated splash screen. Set device orientation as portrait.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   uuid: ^4.3.3
   path_provider: ^2.1.2
   share_plus: ^7.2.2
+  flutter_svg: ^2.0.10+1
+  flutter_animate: ^4.5.0
 
 dev_dependencies:
   bloc_test: ^9.1.2
