--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   intl: ^0.18.0
   uuid: ^4.3.3
   path_provider: ^2.1.2
+  share_plus: ^7.2.2
 
 dev_dependencies:
   bloc_test: ^9.1.2
