--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   share_plus: ^7.2.2
   flutter_svg: ^2.0.10+1
   flutter_animate: ^4.5.0
+  webview_flutter: ^4.7.0
 
 dev_dependencies:
   bloc_test: ^9.1.2
