--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   flutter_animate: ^4.5.0
   webview_flutter: ^4.7.0
+  flutter_tilt: ^2.4.0
 
 dev_dependencies:
   bloc_test: ^9.1.2
